@@ -33,37 +33,49 @@ float TriplanarTexture::GetFloatValue(const HitPoint &hitPoint) const {
 
 Spectrum TriplanarTexture::GetSpectrumValue(const HitPoint &hitPoint) const {
 
-    float weights[3] = {pow(fabsf(hitPoint.shadeN.x),4), pow(fabsf(hitPoint.shadeN.y),4), pow(fabsf(hitPoint.shadeN.z),4)};
+    float weights[3] = {
+		powf(fabsf(hitPoint.shadeN.x), 4),
+		powf(fabsf(hitPoint.shadeN.y), 4),
+		powf(fabsf(hitPoint.shadeN.z), 4)
+	};
     
     const float sum = weights[0] + weights[1] + weights[2];
-    weights[0] = weights[0]/sum;
-    weights[1] = weights[1]/sum;
-    weights[2] = weights[2]/sum;
+    weights[0] = weights[0] / sum;
+    weights[1] = weights[1] / sum;
+    weights[2] = weights[2] / sum;
 
-    if (mapping->GetType() == GLOBALMAPPING3D || mapping->GetType() == LOCALMAPPING3D) {
-        return (texX->GetSpectrumValue(hitPoint)*weights[0] + texY->GetSpectrumValue(hitPoint)*weights[1] + texZ->GetSpectrumValue(hitPoint)*weights[2]);
-    }
-    
-    const Point p = mapping->Map(hitPoint);
+	switch (mapping->GetType()) {
+		case GLOBALMAPPING3D:
+		case LOCALMAPPING3D: {
+			return texX->GetSpectrumValue(hitPoint) * weights[0] +
+					texY->GetSpectrumValue(hitPoint) * weights[1] +
+					texZ->GetSpectrumValue(hitPoint) * weights[2];
+		}
+		case UVMAPPING3D: {
+			const Point p = mapping->Map(hitPoint);
 
-    HitPoint hitPointX = hitPoint;
-    HitPoint hitPointY = hitPoint;
-    HitPoint hitPointZ = hitPoint;
+			HitPoint hitPointX = hitPoint;
+			HitPoint hitPointY = hitPoint;
+			HitPoint hitPointZ = hitPoint;
         
-    if (mapping->GetType() == UVMAPPING3D) {
-        const u_int dataIndex = static_cast<const UVMapping3D*>(mapping)->GetDataIndex();
+			const u_int dataIndex = static_cast<const UVMapping3D*>(mapping)->GetDataIndex();
 
-        hitPointX.uv[dataIndex].u = p.y;
-        hitPointX.uv[dataIndex].v = p.z;
+			hitPointX.uv[dataIndex].u = p.y;
+			hitPointX.uv[dataIndex].v = p.z;
 
-        hitPointY.uv[dataIndex].u = p.x;
-        hitPointY.uv[dataIndex].v = p.z;
+			hitPointY.uv[dataIndex].u = p.x;
+			hitPointY.uv[dataIndex].v = p.z;
 
-        hitPointZ.uv[dataIndex].u = p.x;
-        hitPointZ.uv[dataIndex].v = p.y;
-    }
-
-    return (texX->GetSpectrumValue(hitPointX)*weights[0] + texY->GetSpectrumValue(hitPointY)*weights[1] + texZ->GetSpectrumValue(hitPointZ)*weights[2]);
+			hitPointZ.uv[dataIndex].u = p.x;
+			hitPointZ.uv[dataIndex].v = p.y;
+		
+			return texX->GetSpectrumValue(hitPointX) * weights[0] +
+					texY->GetSpectrumValue(hitPointY) * weights[1] +
+					texZ->GetSpectrumValue(hitPointZ) * weights[2];
+		}
+		default:
+			throw runtime_error("Unknown mapping type in TriplanarTexture: " + ToString(mapping->GetType()));
+	}
 }
 
 Properties TriplanarTexture::ToProperties(const ImageMapCache &imgMapCache, const bool useRealFileName) const {
